--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.1.3",
+    "gsap": "^3.10.4",
+    "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.1",
+    "locomotive-scroll": "^4.1.4",
     "next": "12.1.6",
+    "nprogress": "^0.2.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.32.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.16.0",
